--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/schedule
 spring.datasource.username=postgres
-spring.datasource.password=password1
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
