frontend: update components

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,4 +22,11 @@ dependencies {
     compile "dom4j:dom4j:1.6.1"
     compile "org.modelmapper:modelmapper:2.3.0"
     testCompile "org.springframework.boot:spring-boot-starter-test:$springVersion"
+
+    //    validation
+    compile group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
+    compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.2.Final'
+    compile group: 'org.hibernate', name: 'hibernate-validator-annotation-processor', version: '6.0.2.Final'
+    compile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
+    compile group: 'org.glassfish', name: 'javax.el', version: '3.0.0'
 }
