--- a/web/schedule/package.json
+++ b/web/schedule/package.json
@@ -39,6 +39,7 @@
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "electron": "^5.0.2",
+    "electron-installer-windows": "^1.1.1",
     "electron-packager": "^13.1.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
