--- a/core/build.gradle
+++ b/core/build.gradle
@@ -23,10 +23,12 @@ dependencies {
     compile "org.modelmapper:modelmapper:2.3.0"
     testCompile "org.springframework.boot:spring-boot-starter-test:$springVersion"
 
-    //    validation
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.3.RELEASE'
     compile group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.2.Final'
     compile group: 'org.hibernate', name: 'hibernate-validator-annotation-processor', version: '6.0.2.Final'
     compile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
     compile group: 'org.glassfish', name: 'javax.el', version: '3.0.0'
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
+    compile("com.auth0:java-jwt:3.4.0")
 }
