updated jwt filters

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -31,4 +31,11 @@ dependencies {
     compile group: 'org.glassfish', name: 'javax.el', version: '3.0.0'
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
     compile("com.auth0:java-jwt:3.4.0")
+    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
+    compile group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.10.5'
+// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
+    runtime group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.10.7'
+// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
+    runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.10.5'
+
 }
