--- a/web/schedule/package.json
+++ b/web/schedule/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.3.3",
+    "sort-by-typescript": "^1.1.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
